# cs179-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/glfw-3.4/: CMakeLists.txt
lib/glfw-3.4/src/: CMakeLists.txt  cocoa_platform.h  cocoa_window.m  internal.h  nsgl_context.m  platform.h  platform_thread.h  posix_thread.c  win32_platform.h  win32_thread.c  win32_thread.h
lib/glm-1.0.1/: CMakeLists.txt
lib/glm-1.0.1/glm/detail/: setup.hpp
lib/glm-1.0.1/test/cmake/: CMakeLists.txt
lib/staplegl-0.10.0/staplegl/modules/: gl_functions.hpp
shaders/: fragment.glsl  vertex.glsl
src/: box.h  buffer_manager.cpp  buffer_manager.h  camera.cpp  camera.h  constants.h  fonts.h  main.cpp  particle.cu  particle.cuh  particle.h  particle_simulator.cpp  particle_simulator.h  physics.cpp  physics.cu  physics.cuh  physics.h  shaders.h  test.cu  test.cuh  timer.h
